# xmlpaser-tor

./: .gitignore  config.ini  install-poetry.py  pyproject.toml  requirements.txt
common/: log.py  model.py  translate.py
处理message/: msg.py
处理text/: text-upload.py
处理xml/: main.py
生成导入excel/: toExcel.py
