[tool.poetry]
name = "xmlpaser"
version = "0.1.0"
description = ""
authors = ["youtiaogaugua"]

[tool.poetry.dependencies]
python = "^3.8"
alibabacloud-alimt20181012 = "1.0.2"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
lxml = "^4.7.1"
colorlog = "^6.6.0"
langdetect = "^1.0.9"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
javalang = "^0.13.0"
PyMySQL = "^1.0.2"
DBUtils = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "xmlpaser"
url = "https://mirrors.aliyun.com/pypi/simple/"